<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/create_profile_area"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_grey_850"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="AddProfileFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="16dp"
        android:text="@string/new_profile"
        android:textAppearance="@android:style/TextAppearance.Large"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/prof_nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/prof_nickname_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:nextFocusForward="@id/prof_birthday_input"
            android:hint="@string/nickname"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/prof_birthday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/prof_birthday_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text|date"
            android:nextFocusForward="@id/prof_description_input"
            android:hint="@string/birthday_dd_mm"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/prof_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/prof_description_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:gravity="top"
            android:lines="3"
            android:maxLines="5"
            android:nextFocusForward="@id/prof_create_button"
            android:hint="@string/description"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/prof_community_marker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/profile_belongs_to_community"/>

    <Button
        android:id="@+id/prof_create_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:text="@string/create"/>

</LinearLayout>
