<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/md_grey_850">

    <LinearLayout
        android:id="@+id/main_sidebar_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/sidebar_header_area"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:background="@color/md_light_blue_800"
            android:elevation="4dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="-20dp"
                android:padding="57dp"
                android:theme="@style/Ripple.Item"
                android:src="@drawable/sidebar_logo"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/welcome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/hello_plus_comma"
                    android:textColor="#fff"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/current_user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="-27dp"
                    android:padding="16dp"
                    android:text="@string/guest"
                    android:textColor="#fff"
                    android:textSize="18sp"
                    android:textStyle="bold|italic" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="end"
                android:layout_alignParentEnd="true"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/header_flip"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="12dp"
                    android:src="@drawable/down"/>

            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/accounts_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/md_grey_900"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/add_account_row"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="?android:selectableItemBackground"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="26dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="26dp"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/add"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/add_an_account"
                    android:textColor="#fff"
                    android:textSize="14sp"
                    android:textStyle="bold"/>

            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/profile_area"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="?android:selectableItemBackground"
            android:orientation="horizontal"
            android:clipChildren="false">

            <TextView
                android:id="@+id/my_profile"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:drawableStart="@drawable/profile"
                android:drawablePadding="26dp"
                android:paddingStart="16dp"
                android:text="@string/my_profile"
                android:textSize="14sp"
                android:textStyle="bold"/>

            <LinearLayout
                android:id="@+id/profile_actions_area"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="2dp">

                <ImageView
                    android:id="@+id/setup_profile"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:padding="14dp"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/settings"
                    android:contentDescription="@string/settings"/>

                <ImageView
                    android:id="@+id/switch_profile"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:padding="14dp"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/profile_switch"
                    android:contentDescription="@string/switch_profile"/>

                <ImageView
                    android:id="@+id/add_profile"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:padding="14dp"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/add_box"
                    android:contentDescription="@string/add_profile"/>

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/blog_area"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="?android:selectableItemBackground"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/my_blog"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:drawableStart="@drawable/home"
                android:drawablePadding="26dp"
                android:paddingStart="16dp"
                android:text="@string/my_blog"
                android:textSize="14sp"
                android:textStyle="bold"/>

            <LinearLayout
                android:id="@+id/blog_actions_area"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="2dp">

                <!-- you can't have many blogs in one profile -->
                <!-- but bloc can be not yet created for a profile -->

                <ImageView
                    android:id="@+id/add_blog"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:padding="14dp"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/add_box"
                    android:contentDescription="@string/add_blog"/>

            </LinearLayout>

        </RelativeLayout>

        <TextView
            android:id="@+id/my_bookmarks"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="?android:selectableItemBackground"
            android:gravity="center_vertical"
            android:drawableStart="@drawable/bookmark_list"
            android:drawablePadding="26dp"
            android:paddingStart="16dp"
            android:text="@string/my_bookmarks"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <RelativeLayout
            android:id="@+id/inbox_area"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="?android:selectableItemBackground"
            android:orientation="horizontal"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:orientation="horizontal">


                <ImageView
                    android:id="@+id/inb"
                    android:layout_width="26dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="26dp"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/sidebar_inbox" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/inbox"
                    android:textSize="14sp"
                    android:textStyle="bold"/>
            </LinearLayout>

            <TextView
                android:id="@+id/unread_inbox_count"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="16dp"
                android:background="@drawable/roundedback"
                android:gravity="center"
                android:textColor="#fff"
                android:textSize="14sp"
                android:textStyle="bold"
                android:visibility="gone" />

        </RelativeLayout>

        <TextView
            android:id="@+id/my_favorites"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:background="?android:selectableItemBackground"
            android:drawableStart="@drawable/account_favorited"
            android:drawablePadding="26dp"
            android:paddingStart="16dp"
            android:text="@string/my_favorites"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/my_readers"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:background="?android:selectableItemBackground"
            android:drawableStart="@drawable/account_liked"
            android:drawablePadding="26dp"
            android:paddingStart="16dp"
            android:text="@string/my_readers"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/my_banned"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:background="?android:selectableItemBackground"
            android:drawableStart="@drawable/account_banned"
            android:drawablePadding="26dp"
            android:paddingStart="16dp"
            android:text="@string/my_banned"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/my_communities"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:background="?android:selectableItemBackground"
            android:drawableStart="@drawable/community_big"
            android:drawablePadding="26dp"
            android:paddingStart="16dp"
            android:text="@string/my_communities"
            android:textSize="14sp"
            android:textStyle="bold"
            android:enabled="false"/>

        <TextView
            android:id="@+id/my_settings"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:background="?android:selectableItemBackground"
            android:drawableStart="@drawable/settings"
            android:drawablePadding="26dp"
            android:paddingStart="16dp"
            android:text="@string/settings"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <View
            android:id="@+id/drawer_divider"
            android:layout_width="match_parent"
            android:layout_height="0.75dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:alpha=".25"
            android:visibility="gone"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:descendantFocusability="afterDescendants"
            android:focusableInTouchMode="true">

            <EditText
                android:id="@+id/goto_input_filter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789_.+"
                android:hint="@string/go_to"
                android:imeOptions="actionSearch|flagNoExtractUi"
                android:singleLine="true"
                android:visibility="gone"/>

            <ImageView
                android:id="@+id/close_goto_filder"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_alignBottom="@+id/goto_input_filter"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"
                android:padding="8dp"
                android:theme="@style/Ripple.Item"
                android:visibility="gone"
                android:src="@drawable/close"/>
        </RelativeLayout>

    </LinearLayout>

</ScrollView>